[package]
name = "rstocks"
version = "0.1.0"
authors = ["RAsadi <asadi.rayan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.3.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tui = "0.10"
termion = "1.5"
chrono = "0.4"
slice-deque = "0.3.0"